--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,14 @@ name: symcrypt
 description: A starting point for Dart libraries or applications.
 version: 0.0.1
 author: Hadrien Lejard <hadrien.lejard@gmail.com>
-#homepage: https://www.example.com
+homepage: https://github.com/lejard-h/symcrypt/
 
 environment:
   sdk: '>=1.0.0 <2.0.0'
 
 dependencies:
-  cipher: "^0.7.1"
-  crypto: "^0.9.0"
+  cipher: ">=0.7.1"
+  crypto: ">=0.9.0"
 
 dev_dependencies:
   test: '>=0.12.0 <0.13.0'
